# soundcloud-tools

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  ana.ipynb  ess.ipynb  pyproject.toml  sct  setup_tensorflow.py
.github/workflows/: run.yml
.streamlit/: config.toml
soundcloud_archive/: __main__.py  client.py  meta_editor.py  models.py  settings.py  utils.py  weekly.py
soundcloud_archive/models/: __init__.py  like.py  playlist.py  repost.py  request.py  search.py  stream.py  track.py  user.py
soundcloud_archive/streamlit/: meta_editor.py  utils.py
soundcloud_tools/: __main__.py  client.py  mood.py  mutagen.py  settings.py  utils.py  weekly.py
soundcloud_tools/handler/: folder.py  track.py
soundcloud_tools/hypeddit/: components.py  runner.py
soundcloud_tools/models/: __init__.py  artist_shortcut.py  comment.py  following.py  like.py  playlist.py  repost.py  request.py  search.py  stream.py  track.py  user.py
soundcloud_tools/predict/: __init__.py  _discogs_genres.py  base.py  bpm.py  engagement.py  mood.py  style.py
soundcloud_tools/streamlit/: app.py  client.py  collection.py  components.py  file_selection.py  meta_editor.py  track_handler.py  utils.py
soundcloud_tools/streamlit/tools/: key_shifter.py  like_explorer.py  meta_editor.py
soundcloud_tools/utils/: __init__.py  string.py
