[tool.poetry]
name = "soundcloud-archive"
version = "0.1.0"
description = ""
authors = ["Fabian Stermann <fabian.stermann@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pydantic = "^2.9.0"
pydantic-settings = "^2.4.0"
httpx = "^0.27.2"
starlette = "^0.38.4"
devtools = "^0.12.2"
fake-useragent = "^1.5.1"

[tool.poetry.scripts]
soundcloud_archive = 'soundcloud_archive.__main__:main_script'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 120

[tool.ruff.lint]
fixable = ["I"]
extend-select = [
    "I", # isort imports
    "T", # no print statements
]
