[tool.poetry]
name = "soundcloud-tools"
version = "0.1.0"
description = ""
authors = ["Fabian Stermann <fabian.stermann@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pydantic = "^2.9.0"
pydantic-settings = "^2.4.0"
httpx = "^0.27.2"
starlette = "^0.40.0"
devtools = "^0.12.2"
fake-useragent = "^1.5.1"
requests = "^2.32.4"
tabulate = "^0.9.0"
streamlit = "^1.50.0"

[tool.poetry.group.editor]
optional = true

[tool.poetry.group.editor.dependencies]
streamlit = "^1.45.1"
numpy = "<2"
pydub = "^0.25.1"
plotly = "^5.24.1"
mutagen = "^1.47.0"
essentia = "^2.1b6.dev1177"
essentia-tensorflow = "^2.1b6.dev1177"

[tool.poetry.scripts]
soundcloud_tools = 'soundcloud_tools.__main__:main_script'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 120

[tool.ruff.lint]
fixable = ["I"]
extend-select = [
    "I",   # isort imports
    "T",   # no print statements
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "C90", # mccabe code complexity
    "RUF", # Ruff-specific rules
]
